--- a/src/styles/stylesListMovies.css
+++ b/src/styles/stylesListMovies.css
@@ -6,11 +6,12 @@
 .searchMovie {
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .searchMovie__input {
     font-size: 1.3rem;
     color: gray;
-    width: 50%;
+    width: 100%;
     border-radius: 5px;
     padding: 10px;
     
@@ -20,7 +21,7 @@
 }
 
 .searchMovie__boxInput {
-    width: 100%;
+    width: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -128,7 +129,7 @@
     color: #444;
     line-height: 1.3;
     padding: .4em 1.4em .3em .8em;
-    width: 50%;
+    width: 100%;
     max-width: 100%; 
     box-sizing: border-box;
    margin: 0px auto;
